Dropdown to change status directly in My Reads

--- a/frontend/userPages/myReads.html
+++ b/frontend/userPages/myReads.html
@@ -109,7 +109,7 @@
                             <div class="books-grid" id="currentlyReadingGrid">
                                 <div class="empty-state">
                                     <img src="../images/bookCoverDefault.svg" alt="No books">
-                                    <p>No books currently reading</p>
+                                    <p>Not currently reading any books</p>
                                 </div>
                             </div>
                         </div>
