updated overall visuals of sites on remaining pages that needed it

--- a/frontend/subpages/browse.html
+++ b/frontend/subpages/browse.html
@@ -214,16 +214,16 @@
                         <h1 style="font-weight: bold;" id="readingListTitle">Add to Reading List</h1>
                         <hr style="background-color: var(--offWhite); width: 80%;" class="mb-4">
                         <form>     
-                            <fieldset class="mb-4">
+                            <fieldset class="mb-4 d-flex justify-content-center align-items-center flex-column">
                                 <label> Select Reading Status </label> <br>
-                                <div style="display: flex; flex-direction: column; gap: 1rem; margin-top: 1rem;">
-                                    <button type="button" class="main-button-brown-small status-choice" data-status="Want to Read">
+                                <div style="display: flex; flex-direction: column; gap: 1rem;">
+                                    <button type="button" class="main-button-brown status-choice" data-status="Want to Read">
                                         Want to Read
                                     </button>
-                                    <button type="button" class="main-button-brown-small status-choice" data-status="Currently Reading">
+                                    <button type="button" class="main-button-brown status-choice" data-status="Currently Reading">
                                         Currently Reading
                                     </button>
-                                    <button type="button" class="main-button-brown-small status-choice" data-status="Finished">
+                                    <button type="button" class="main-button-brown status-choice" data-status="Finished">
                                         Finished
                                     </button>
                                 </div>
