--- a/frontend/userPages/myCollections.html
+++ b/frontend/userPages/myCollections.html
@@ -93,9 +93,9 @@
         <section>
 
             <div class="d-flex flex-column align-items-center text-center">
-                <div class="sectionContentHolderClear">
+                <div class="sectionContentHolderClear mb-4">
 
-                    <h1 class="title-text">My Collections</h1>
+                    <h2 class="title-text" style="font-size: 10vh;">My Collections</h2>
 
                     <select id="collectionsDropdown" class="collections-dropdown"></select>
                     <br><br>
