--- a/frontend/userPages/myReads.html
+++ b/frontend/userPages/myReads.html
@@ -96,7 +96,7 @@
             <div class="d-flex flex-column align-items-center text-center">
                 <div class="sectionContentHolderClear" style="max-width: 1400px; width: 95%;">
 
-                    <h1 class="title-text">My Reads</h1>
+                    <h1 class="title-text" style="font-size: 10vh;">My Reads</h1>
 
                     <div id="loadingIndicator" class="loading">
                         Loading your books...
