--- a/frontend/userPages/profile.html
+++ b/frontend/userPages/profile.html
@@ -219,8 +219,8 @@
             <!-- View Collection Popup -->
             <div id="viewCollectionPopup" class="popup">
                 <div class="popupContent">
-                    <h2 id="collectionPopupTitle"></h2>
-
+                    <h1 id="collectionPopupTitle" style="font-weight: bold;"></h1>
+                    <hr style="background-color: var(--offWhite); width: 80%;" class="mb-4">
                     <div id="collectionPopupBooks">Loading...</div>
                 </div>
                 <span class="close">&times;</span>
