Fix search placeholder text

--- a/frontend/subpages/collections.html
+++ b/frontend/subpages/collections.html
@@ -103,7 +103,7 @@
                         <form id="filterform">
                             <fieldset class="mb-4">
                                 <label> Search by Title/Username </label>
-                                <input type="text" placeholder="Search Title/Author..." name="search" id="collectionSearchInput" style="margin-left: 0;">
+                                <input type="text" placeholder="Search Title/Username..." name="search" id="collectionSearchInput" style="margin-left: 0;">
                             </fieldset>
                             <fieldset class="mb-4">
                                 <label> Creation Date Range Start </label> 
