--- a/frontend/userPages/myReads.html
+++ b/frontend/userPages/myReads.html
@@ -103,35 +103,37 @@
                     </div>
 
                     <div id="booksContainer" style="display: none;">
-                        <!-- Currently Reading Section -->
-                        <div class="reading-section">
-                            <h2 class="section-header">Currently Reading</h2>
-                            <div class="books-grid" id="currentlyReadingGrid">
-                                <div class="empty-state">
-                                    <img src="../images/bookCoverDefault.svg" alt="No books">
-                                    <p>Not currently reading any books</p>
+                        <div class="d-flex justify-content-center align-items-center flex-column">
+                            <!-- Currently Reading Section -->
+                            <div class="reading-section">
+                                <h2 class="section-header">Currently Reading</h2>
+                                <div class="books-grid" id="currentlyReadingGrid">
+                                    <div class="empty-state">
+                                        <img src="../images/bookCoverDefault.svg" alt="No books">
+                                        <p>Not currently reading any books</p>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
 
-                        <!-- Want to Read Section -->
-                        <div class="reading-section">
-                            <h2 class="section-header">Want to Read</h2>
-                            <div class="books-grid" id="wantToReadGrid">
-                                <div class="empty-state">
-                                    <img src="../images/bookCoverDefault.svg" alt="No books">
-                                    <p>No books in your to-read list</p>
+                            <!-- Want to Read Section -->
+                            <div class="reading-section">
+                                <h2 class="section-header">Want to Read</h2>
+                                <div class="books-grid" id="wantToReadGrid">
+                                    <div class="empty-state">
+                                        <img src="../images/bookCoverDefault.svg" alt="No books">
+                                        <p>No books in your to-read list</p>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
 
-                        <!-- Finished Section -->
-                        <div class="reading-section">
-                            <h2 class="section-header">Finished</h2>
-                            <div class="books-grid" id="finishedGrid">
-                                <div class="empty-state">
-                                    <img src="../images/bookCoverDefault.svg" alt="No books">
-                                    <p>No finished books yet</p>
+                            <!-- Finished Section -->
+                            <div class="reading-section">
+                                <h2 class="section-header">Finished</h2>
+                                <div class="books-grid" id="finishedGrid">
+                                    <div class="empty-state">
+                                        <img src="../images/bookCoverDefault.svg" alt="No books">
+                                        <p>No finished books yet</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
